--- a/package.json
+++ b/package.json
@@ -1,6 +1,9 @@
 {
   "name": "superforms",
   "version": "0.0.0",
+  "scripts": {
+    "start": "node server.js"
+  },
   "description": "",
   "main": "server.js",
   "dependencies": {
