--- a/package.json
+++ b/package.json
@@ -11,6 +11,7 @@
     "body-parser": "^1.4.3",
     "connect-pg-simple": "^3.1.0",
     "cookie-parser": "^1.4.1",
+    "excel-export": "^0.5.1",
     "express": "^4.4.5",
     "express-session": "^1.13.0",
     "hashids": "^1.0.2",
@@ -18,6 +19,7 @@
     "nconf": "^0.8.4",
     "nodemailer": "^2.3.2",
     "pg": "^4.5.3",
+    "supervisor": "^0.11.0",
     "winston": "^2.2.0",
     "winston-daily-rotate-file": "^1.1.4"
   }
