--- a/config/config.json
+++ b/config/config.json
@@ -17,6 +17,7 @@
 	},
 	"hash" : {
 		"user" : { "salt" : "Salt is used to", "length" : 8 },
+		"regConfirm" : { "length" : 64 },
 		"form" : { "salt" : "generate unique alphabets.", "length" : 9	},
 		"response" : { "salt" : "The alphabet is also", "length" : 10 },
 		"report" : { "salt" : "shuffled based on salt.", "length" : 11 }
