--- a/package.json
+++ b/package.json
@@ -16,6 +16,7 @@
     "express-session": "^1.13.0",
     "hashids": "^1.0.2",
     "jade": "^1.11.0",
+    "multer": "^1.2.0",
     "nconf": "^0.8.4",
     "nodemailer": "^2.3.2",
     "pg": "^4.5.3",
