--- a/package.json
+++ b/package.json
@@ -15,11 +15,11 @@
     "express": "^4.4.5",
     "express-session": "^1.13.0",
     "hashids": "^1.0.2",
-    "jade": "^1.11.0",
     "multer": "^1.2.0",
     "nconf": "^0.8.4",
     "nodemailer": "^2.3.2",
     "pg": "^4.5.3",
+    "pug": "^2.0.0-beta5",
     "supervisor": "^0.11.0",
     "winston": "^2.2.0",
     "winston-daily-rotate-file": "^1.1.4"
