--- a/package.json
+++ b/package.json
@@ -1,10 +1,10 @@
 {
   "name": "superforms",
-  "version": "0.0.0",
+  "version": "0.1.0",
   "scripts": {
     "start": "node server.js"
   },
-  "description": "",
+  "description": "Node.js web-app that allows to generate survey forms, send them, collect responses and export data to XLSX",
   "main": "server.js",
   "dependencies": {
     "bcryptjs": "^2.3.0",
@@ -20,8 +20,10 @@
     "nodemailer": "^2.3.2",
     "pg": "^4.5.3",
     "pug": "^2.0.0-beta5",
-    "supervisor": "^0.11.0",
     "winston": "^2.2.0",
     "winston-daily-rotate-file": "^1.1.4"
+  },
+  "devDependencies": {
+    "supervisor": "^0.11.0"
   }
 }
