--- a/package.json
+++ b/package.json
@@ -7,7 +7,6 @@
   "description": "Node.js web-app that allows to generate survey forms, send them, collect responses and export data to XLSX",
   "main": "server.js",
   "dependencies": {
-    "bcryptjs": "^2.3.0",
     "body-parser": "^1.4.3",
     "connect-pg-simple": "^3.1.0",
     "cookie-parser": "^1.4.1",
@@ -24,6 +23,15 @@
     "winston-daily-rotate-file": "^1.1.4"
   },
   "devDependencies": {
-    "supervisor": "^0.11.0"
+    "babel-core": "^6.14.0",
+    "babel-loader": "^6.2.5",
+    "babel-preset-es2015": "^6.14.0",
+    "babel-preset-react": "^6.11.1",
+    "babel-preset-stage-0": "^6.5.0",
+    "babel-preset-stage-1": "^6.13.0",
+    "react": "^15.3.1",
+    "react-dom": "^15.3.1",
+    "supervisor": "^0.11.0",
+    "webpack": "^1.13.2"
   }
 }
