--- a/package.json
+++ b/package.json
@@ -2,7 +2,8 @@
 	"name": "superforms",
 	"version": "0.4.0",
 	"scripts": {
-		"start": "node server.js"
+		"start": "node server.js",
+		"sv": "supervisor -i public server.js"
 	},
 	"description": "Node.js web-app that allows to generate survey forms, send them, collect responses and export data to XLSX",
 	"main": "server.js",
