--- a/package.json
+++ b/package.json
@@ -1,37 +1,39 @@
 {
-	"name": "superforms",
-	"version": "0.4.0",
-	"scripts": {
-		"start": "node server.js",
-		"sv": "supervisor -i public server.js"
-	},
-	"description": "Node.js web-app that allows to generate survey forms, send them, collect responses and export data to XLSX",
-	"main": "server.js",
-	"dependencies": {
-		"body-parser": "^1.4.3",
-		"connect-pg-simple": "^3.1.0",
-		"cookie-parser": "^1.4.1",
-		"excel-export": "^0.5.1",
-		"express": "^4.4.5",
-		"express-session": "^1.13.0",
-		"hashids": "^1.0.2",
-		"nconf": "^0.8.4",
-		"nodemailer": "^2.3.2",
-		"pg": "^6.1.0",
-		"pug": "^2.0.0-beta5",
-		"winston": "^2.2.0",
-		"winston-daily-rotate-file": "^1.1.4"
-	},
-	"devDependencies": {
-		"babel-core": "^6.14.0",
-		"babel-loader": "^6.2.5",
-		"babel-preset-es2015": "^6.14.0",
-		"babel-preset-react": "^6.11.1",
-		"babel-preset-stage-0": "^6.5.0",
-		"babel-preset-stage-1": "^6.13.0",
-		"react": "^15.3.1",
-		"react-dom": "^15.3.1",
-		"supervisor": "^0.12.0",
-		"webpack": "^1.13.2"
-	}
+  "name": "superforms",
+  "version": "0.4.0",
+  "scripts": {
+    "start": "node server.js",
+    "sv": "supervisor -i public server.js"
+  },
+  "description": "Node.js web-app that allows to generate survey forms, send them, collect responses and export data to XLSX",
+  "main": "server.js",
+  "dependencies": {
+    "body-parser": "^1.4.3",
+    "connect-pg-simple": "^3.1.0",
+    "cookie-parser": "^1.4.1",
+    "excel-export": "^0.5.1",
+    "express": "^4.4.5",
+    "express-session": "^1.13.0",
+    "hashids": "^1.0.2",
+    "moment": "^2.17.1",
+    "nconf": "^0.8.4",
+    "nodemailer": "^2.3.2",
+    "pg": "^6.1.0",
+    "pug": "^2.0.0-beta5",
+    "ua-parser": "^0.3.5",
+    "winston": "^2.2.0",
+    "winston-daily-rotate-file": "^1.1.4"
+  },
+  "devDependencies": {
+    "babel-core": "^6.14.0",
+    "babel-loader": "^6.2.5",
+    "babel-preset-es2015": "^6.14.0",
+    "babel-preset-react": "^6.11.1",
+    "babel-preset-stage-0": "^6.5.0",
+    "babel-preset-stage-1": "^6.13.0",
+    "react": "^15.3.1",
+    "react-dom": "^15.3.1",
+    "supervisor": "^0.12.0",
+    "webpack": "^1.13.2"
+  }
 }
