--- a/package.json
+++ b/package.json
@@ -2,7 +2,8 @@
   "name": "superforms",
   "version": "0.4.0",
   "scripts": {
-    "start": "node server.js",
+    "start": "babel-node server.js --presets es2015,stage-2,react",
+    "dev": "babel-watch server.js --presets es2015,stage-2,react",
     "sv": "supervisor -i public server.js"
   },
   "description": "Node.js web-app that allows to generate survey forms, send them, collect responses and export data to XLSX",
@@ -15,22 +16,29 @@
     "express": "^4.4.5",
     "express-session": "^1.13.0",
     "hashids": "^1.0.2",
+    "immutable": "^3.8.1",
     "moment": "^2.17.1",
     "nconf": "^0.8.4",
     "nodemailer": "^2.3.2",
     "pg": "^6.1.0",
     "pug": "^2.0.0-beta5",
+    "react": "^15.4.2",
+    "react-dom": "^15.4.2",
+    "react-redux": "^5.0.2",
+    "redux": "^3.6.0",
     "ua-parser": "^0.3.5",
     "winston": "^2.2.0",
     "winston-daily-rotate-file": "^1.1.4"
   },
   "devDependencies": {
+    "babel-cli": "^6.23.0",
     "babel-core": "^6.14.0",
     "babel-loader": "^6.2.5",
     "babel-preset-es2015": "^6.14.0",
     "babel-preset-react": "^6.11.1",
     "babel-preset-stage-0": "^6.5.0",
     "babel-preset-stage-1": "^6.13.0",
+    "babel-watch": "^2.0.6",
     "react": "^15.3.1",
     "react-dom": "^15.3.1",
     "supervisor": "^0.12.0",
