--- a/package.json
+++ b/package.json
@@ -2,8 +2,8 @@
   "name": "superforms",
   "version": "0.4.0",
   "scripts": {
-    "start": "babel-node server.js --presets es2015,stage-2,react",
-    "dev": "babel-watch server.js --presets es2015,stage-2,react",
+    "start": "babel-node server.js",
+    "dev": "babel-watch server.js",
     "sv": "supervisor -i public server.js"
   },
   "description": "Node.js web-app that allows to generate survey forms, send them, collect responses and export data to XLSX",
@@ -34,6 +34,7 @@
     "babel-cli": "^6.23.0",
     "babel-core": "^6.14.0",
     "babel-loader": "^6.2.5",
+    "babel-plugin-transform-decorators-legacy": "^1.3.4",
     "babel-preset-es2015": "^6.14.0",
     "babel-preset-react": "^6.11.1",
     "babel-preset-stage-0": "^6.5.0",
